# emmg_ws

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: MyApplication.h
src/: MyApplication.cpp  main.cpp
